--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,12 @@
             </div>
         </div>
     </div>
+<!-- chatBot -->
+    <div class="chatbot">
+        <div class="nav">
 
+        </div>
+    </div>
 
     <div class="container">
         <div class="index">
