--- a/src/main/resources/templates/member/findEmail.html
+++ b/src/main/resources/templates/member/findEmail.html
@@ -9,20 +9,41 @@
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
-    <form th:action="@{/find-email}" method="post">
-        <ul>
-            <li>
-                <label for="memberNickName">닉네임</label>
-                <input type="text" id="memberNickName" name="memberNickName" required="required" placeholder="닉네임 입력"> <br>
-            </li>
-            <li>
-                <label for="memberPhone">휴대전화번호</label>
-                <input type="text" id="memberPhone" name="memberPhone" required="required" placeholder="휴대전화번호 입력"> <br>
-            </li>
-        </ul>
-        <button type="submit">이메일 찾기</button>
-    </form>
-    <div id="foundEmail" style="display: none;"></div>
+<div class="container">
+    <div class="find">
+        <div class="find-con">
+            <div class="title">
+                <h1>이메일 찾기</h1>
+            </div>
+            <div class="find-form">
+                <form th:action="@{/find-email}" method="post">
+                    <ul>
+                        <li class="nickName">
+                            <div class="nickName-group">
+                                <label for="memberNickName">닉네임</label>
+                                <div class="nickName-write">
+                                    <input type="text" id="memberNickName" name="memberNickName" required="required" placeholder="닉네임 입력">
+                                </div>
+                            </div>
+                        </li>
+                        <li class="phone">
+                            <div class="phone-group">
+                                <label for="memberPhone">휴대전화번호</label>
+                                <div class="phone-write">
+                                    <input type="text" id="memberPhone" name="memberPhone" required="required" placeholder="휴대전화번호 입력">
+                                </div>
+                            </div>
+                        </li>
+                        <li class="Btn">
+                            <button type="submit">이메일 찾기</button>
+                        </li>
+                    </ul>
+                </form>
+                <div id="foundEmail" style="display: none;" class="foundEmail"></div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 <div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
