문의사항 댓글

--- a/src/main/resources/templates/inquiry/detail.html
+++ b/src/main/resources/templates/inquiry/detail.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>문의사항 상세 페이지</title>
     <link rel="stylesheet" th:href="@{/css/inquiry/detail.css}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script th:src="@{/js/inquiry/write.js}" defer="defer"></script>
+    <script th:src="@{/js/inquiry/reply.js}" defer></script>
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
@@ -17,8 +19,8 @@
             <div class="board-con">
                 <div class="top">
                     <div class="top-title">
-                        <span th:text = "${inquiryDto.inqType}" class="typeSpan"></span>
-                        <span th:text = "${inquiryDto.inquiryTitle}" class="titleSpan"></span>
+                        <span th:text="${inquiryDto.inqType}" class="typeSpan"></span>
+                        <span th:text="${inquiryDto.inquiryTitle}" class="titleSpan"></span>
                     </div>
                     <div class="top-bottom">
                         <div class="left">
@@ -26,19 +28,20 @@
                             <span th:text="${#temporals.format(inquiryDto.UpdateTime,'yyyy년 MM월 dd일 hh:mm')}"></span>
                         </div>
                         <div class="right">
-                            <span th:text = "${inquiryDto.inquiryWriter}"></span>
-                            <span th:text = "${inquiryDto.inqHit}"></span>
+                            <span th:text="${inquiryDto.inquiryWriter}"></span>
+                            <span th:text="${inquiryDto.inqHit}"></span>
                         </div>
                     </div>
                 </div>
                 <div class="middle">
-                    <textarea th:text="${inquiryDto.inquiryContent}" th:value="${inquiryDto.inquiryContent}" name="inquiryContent" id="contentText" class="writeInput" disabled></textarea>
+                    <textarea th:text="${inquiryDto.inquiryContent}" th:value="${inquiryDto.inquiryContent}"
+                              name="inquiryContent" id="contentText" class="writeInput" disabled></textarea>
                 </div>
                 <div class="bottom">
                     <div class="bottom-top">
                         <div class="delete">
                             <th:block sec:authorize="hasAnyRole('ADMIN')">
-                            <a th:href="@{/inquiry/delete/{id}(id=${inquiryDto.inqId})}">삭제하기</a>
+                                <a th:href="@{/inquiry/delete/{id}(id=${inquiryDto.inqId})}">삭제하기</a>
                         </div>
                         <div class="list">
                             <a th:href="@{/inquiry/list?page=0&select=&search=}" class="list">LIST</a>
@@ -47,19 +50,40 @@
                     <div class="bottom-bottom">
                         <div class="update">
                             <th:block sec:authorize="hasAnyRole('ADMIN')">
-                            <a th:href="@{/inquiry/update/{id}(id=${inquiryDto.inqId})}">수정하기</a>
+                                <a th:href="@{/inquiry/update/{id}(id=${inquiryDto.inqId})}">수정하기</a>
                         </div>
                     </div>
                 </div>
             </div>
             <!--댓글-->
+            <style>
+                .hidden {display:none}
+            </style>
             <div class="reply-con">
                 <div class="reply-write">
-                    <form action="@{/inquiry/}">
-                        <!-- 번호 -->
+                    <form id="replyForm">
+                        <input type="hidden" readonly name="inqId"
+                               th:value="${inquiryDto.inqId}" th:id="inqId">
+                        <ul>
+                            <li>
+                                <textarea name="reply" id="reply"
+                                          cols="30" rows="1" placeholder="내용작성"></textarea>
+                            </li>
+                            <!--                            <li>-->
+                            <!--                                <label for="reviewFile">리뷰사진</label>-->
+                            <!--                                <input type="file" multiple name="reviewFile" id="reviewFile">-->
+                            <!--                            </li>-->
+                            <li>
+                                <input type="button" value="답글작성" id="replyBtn">
+                            </li>
+                        </ul>
                     </form>
                 </div>
+                <div class="replyList">
+                    <div id="replyCon">
 
+                    </div>
+                </div>
             </div>
         </div>
     </div>
