--- a/src/main/resources/templates/member/update.html
+++ b/src/main/resources/templates/member/update.html
@@ -7,8 +7,8 @@
   <title>update</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script th:src="@{/js/member/updateValid.js}" defer="defer"></script>
-  <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
-  <script th:src="@{/js/member/addressApi.js}" defer="defer"></script>
+  <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script> <!--다음 api 관련 js-->
+  <script th:src="@{/js/member/addressApi.js}" defer="defer"></script> <!--다음 api 관련 js-->
   <script th:src="@{/js/member/update_birth.js}" defer="defer"></script>
 </head>
 <body>
