--- a/src/main/resources/static/css/member/tempPassword.css
+++ b/src/main/resources/static/css/member/tempPassword.css
@@ -1,3 +1,153 @@
 @import url(/css/common/reset.css);
 @import url(/css/common/header.css);
 @import url(/css/common/footer.css);
+/* container */
+.container{
+    width: 100%;
+}
+/* container > temp */
+.container .temp{
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    box-sizing: border-box;
+}
+.container .temp .temp-con{
+    width: 900px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;   
+}
+/* title */
+.container .temp .temp-con .title{
+    padding: 30px;
+    gap: 10px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+}
+.container .temp .temp-con .temp-form{
+    padding: 45px;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.container .temp .temp-con .temp-form form{
+    margin: auto;
+    text-align: center;
+    width: 700px;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    box-sizing: border-box;
+    align-items: center;
+}
+.container .temp .temp-con .temp-form form>ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+.container .temp .temp-con .temp-form form>ul>li:not(.Btn){
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    padding: 10px;
+}
+.container .temp .temp-con .temp-form form>ul>li.email{
+}
+.container .temp .temp-con .temp-form form>ul>li.email .email-group label{
+    font-size: 25px;
+    padding: 10px;
+    display: flex;
+    justify-content: start;
+}
+.container .temp .temp-con .temp-form form>ul>li.email .email-group .email-write{
+    display: inline-flex;
+    height: inherit;
+    align-items: center;
+    position: relative;
+    gap: 10px;
+}
+.container .temp .temp-con .temp-form form>ul>li.email .email-group .email-write input{
+    height: 35px;
+    width: 500px;
+    text-align: center;
+    font-size: 20px;
+    border-bottom: 2px solid #8C9CDB;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    align-items: center;
+}
+.container .temp .temp-con .temp-form form>ul>li.phone{
+}
+.container .temp .temp-con .temp-form form>ul>li.phone .phone-group label{
+    font-size: 25px;
+    padding: 10px;
+    display: flex;
+    justify-content: start;
+}
+.container .temp .temp-con .temp-form form>ul>li.phone .phone-group .phone-write{
+    display: inline-flex;
+    height: inherit;
+    align-items: center;
+    position: relative;
+    gap: 10px;
+}
+.container .temp .temp-con .temp-form form>ul>li.phone .phone-group .phone-write input{
+    height: 35px;
+    width: 500px;
+    text-align: center;
+    font-size: 20px;
+    border-bottom: 2px solid #8C9CDB;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    align-items: center;
+}
+.container .temp .temp-con .temp-form form>ul>li.Btn{
+    width: 500px;
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+}
+.container .temp .temp-con .temp-form form>ul>li.Btn button{
+    width: 480px;
+    height: 50px;
+    text-align: center;
+    font-size: 23px;
+    border-radius: 10px;
+    border: none;
+    background: #4b66c79e;
+    color: white;
+    outline: none;
+    padding: 15px;
+    gap: 15px;
+    cursor: pointer;
+}
+.container .temp .temp-con .temp-form form>ul>li.Btn button:hover{
+    box-sizing: border-box;
+    background: #4b66c7;
+    box-shadow: 0 10px 10px 0 #cccccc;
+}
+
+.container .temp .temp-con .temp-form .password{
+    font-size: 23px;
+    font-weight: bold;
+}
