--- a/src/main/resources/templates/member/tempPassword.html
+++ b/src/main/resources/templates/member/tempPassword.html
@@ -9,20 +9,41 @@
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
-<form id="tempPasswordForm" th:action="@{/send-mail/password}" method="post">
-    <ul>
-        <li>
-            <label for="memberEmail">이메일</label>
-            <input type="email" id="memberEmail" name="memberEmail" required="required" placeholder="이메일 입력"> <br>
-        </li>
-        <li>
-            <label for="memberPhone">휴대전화번호</label>
-            <input type="text" id="memberPhone" name="memberPhone" required="required" placeholder="휴대전화번호 입력"> <br>
-        </li>
-    </ul>
-    <button type="submit">임시비밀번호 발급</button>
-</form>
-<div id="tempPasswordMessage" style="display: none;"></div>
+<div class="container">
+    <div class="temp">
+        <div class="temp-con">
+            <div class="title">
+                <h1>비밀번호 찾기</h1>
+            </div>
+            <div class="temp-form">
+                <form id="tempPasswordForm" th:action="@{/send-mail/password}" method="post">
+                    <ul>
+                        <li class="email">
+                            <div class="email-group">
+                                <label for="memberEmail">이메일</label>
+                                <div class="email-write">
+                                    <input type="email" id="memberEmail" name="memberEmail" required="required" placeholder="이메일 입력">
+                                </div>
+                            </div>
+                        </li>
+                        <li class="phone">
+                            <div class="phone-group">
+                                <label for="memberPhone">휴대전화번호</label>
+                                <div class="phone-write">
+                                    <input type="text" id="memberPhone" name="memberPhone" required="required" placeholder="휴대전화번호 입력">
+                                </div>
+                            </div>
+                        </li>
+                        <li class="Btn">
+                            <button type="submit">임시비밀번호 발급</button>
+                        </li>
+                    </ul>
+                </form>
+                <div id="tempPasswordMessage" style="display: none;" class="password"></div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 <div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
