--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -195,6 +195,11 @@ html{
    #BAADFF 0px 15px 30px -15px,
     #BAADFF 0px -1px 3px 0px inset;
 }
+.chatbot .nav a img{
+  width: 40px;
+  height: 40px;
+  background: transparent;
+}
 
 
 .container{
