--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,9 @@
 <!-- chatBot -->
     <div class="chatbot">
         <div class="nav">
-
+            <a href="">
+                <img th:src="@{/images/chatbot.png}" alt="">
+            </a>
         </div>
     </div>
 
