--- a/src/main/resources/templates/semiMember/detail.html
+++ b/src/main/resources/templates/semiMember/detail.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <title>detail</title>
+  <link rel="stylesheet" th:href="@{/css/semiMember/detail.css}">
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
