--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -34,14 +34,15 @@
                     </th:block>
                     <th:block sec:authorize="hasAnyRole('ADMIN', 'MEMBER', 'SELLER')">
                         <li><a th:href="@{/member/logout}">로그아웃</a></li>
-                        <span th:text="${#authentication.principal.memberEntity.memberNickName}" class="data1 span"></span>님 <!-- 일반회원 닉네임 출력 -->
+                        <li><span th:text="${#authentication.principal.memberEntity.memberNickName}" class="data1 span"></span>님</li> <!-- 일반회원 닉네임 출력 -->
                         <!--프로필 이미지 출력-->
-                        <a th:href="@{/member/detail/{memberId}(memberId=${#authentication.principal.memberEntity.memberId})}">
+                        <li><a th:href="@{/member/detail/{memberId}(memberId=${#authentication.principal.memberEntity.memberId})}">
                             <div id="image-preview">
 <!--                                <img id="preview-image" th:src="${#authentication.principal.memberEntity.image.imageUrl}" alt="프로필 이미지" style="width: 35px; height: 35px;">-->
                                 <img id="preview-image" th:src="${#authentication.principal != null and #authentication.principal.memberEntity.image != null ? #authentication.principal.memberEntity.image.imageUrl : '/profileImages/default.png'}" alt="프로필 이미지" style="width: 35px; height: 35px;">
                             </div>
                         </a>
+                        </li>
                     </th:block>
                     <th:block sec:authorize="hasAnyRole('SEMIMEMBER')">
                         <li><a th:href="@{/member/logout}">로그아웃</a></li>
