문의사항댓글

--- a/src/main/resources/templates/inquiry/detail.html
+++ b/src/main/resources/templates/inquiry/detail.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/inquiry/detail.css}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script th:src="@{/js/inquiry/write.js}" defer="defer"></script>
-    <script th:src="@{/js/inquiry/reply.js}" defer></script>
+    <script th:src="@{/js/inquiry/reply.js}" defer="defer"></script>
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
