회원목록(페이징) 진행중

--- a/src/main/resources/templates/member/paginglist.html
+++ b/src/main/resources/templates/member/paginglist.html
@@ -18,7 +18,7 @@
         </th>
       </tr>
       <tr>
-        <th>아이디</th>
+        <th>회원번호</th>
         <th>글제목</th>
         <th>글내용</th>
         <th>작성자</th>
