--- a/src/main/resources/templates/semiMember/semiMemberList.html
+++ b/src/main/resources/templates/semiMember/semiMemberList.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <title>회원 목록</title>
+    <title>간편회원 목록</title>
 </head>
 <body>
 <!--<div th:replace="~{fragments/common/header :: headerFragment}"></div>-->
@@ -21,31 +21,21 @@
 <!--            <th>이미지</th>-->
             <th>회원번호</th>
             <th>이메일</th>
-            <th>이름</th>
-            <th>닉네임</th>
             <th>휴대전화번호</th>
-            <th>생년월일</th>
-            <th>주소</th>
             <th>권한</th>
             <th>가입일</th>
-            <th>정보수정일</th>
             <th>상세보기</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="member : ${memberDtoList}">
-            <td th:text="${member.memberId}"></td>
-            <td th:text="${member.memberEmail}"></td>
-            <td th:text="${member.memberName}"></td>
-            <td th:text="${member.memberNickName}"></td>
-            <td th:text="${member.memberPhone}"></td>
-            <td th:text="${member.memberBirth}"></td>
-            <td th:text="${member.memberStreetAddress + ', ' + member.memberDetailAddress}"></td>
-            <td th:text="${member.role}"></td>
-            <td th:text="${#temporals.format(member.createTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
-            <td th:text="${#temporals.format(member.updateTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
+        <tr th:each="semiMember : ${semiMemberDtoList}"> <!--아래 수정해야함-->
+            <td th:text="${semiMember.semiMemberId}"></td>
+            <td th:text="${semiMember.semiMemberEmail}"></td>
+            <td th:text="${semiMember.semiMemberPhone}"></td>
+            <td th:text="${semiMember.role}"></td>
+            <td th:text="${#temporals.format(semiMember.createTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
             <td>
-                <a th:href="@{/member/detail/{memberId}(memberId=${member.memberId})}">보기</a> <!-- /id=member.id -->
+                <a th:href="@{/semiMember/detail/{semiMemberId}(semiMemberId=${semiMember.semiMemberId})}">보기</a> <!-- /id=member.id -->
             </td>
         </tr>
         </tbody>
