일반회원목록 페이징 기능

--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -36,11 +36,12 @@
                     <th:block sec:authorize="hasAnyRole('ADMIN', 'MEMBER', 'SELLER')">
                         <li><a th:href="@{/member/logout}">로그아웃</a></li>
                         <li><span th:text="${#authentication.principal.memberEntity.memberNickName}" class="data1 span"></span>님</li> <!-- 일반회원 닉네임 출력 -->
+<!--                        <li><span th:text="${member.memberNickName}" class="data1 span"></span>님</li> &lt;!&ndash; 일반회원 닉네임 출력 &ndash;&gt;-->
                         <!--프로필 이미지 출력-->
                         <li><a th:href="@{/member/detail/{memberId}(memberId=${#authentication.principal.memberEntity.memberId})}">
                             <div id="image-preview">
-<!--                                <img id="preview-image" th:src="${#authentication.principal.memberEntity.image.imageUrl}" alt="프로필 이미지" style="width: 35px; height: 35px;">-->
-                                <img id="preview-image" th:src="${#authentication.principal != null and #authentication.principal.memberEntity.image != null ? #authentication.principal.memberEntity.image.imageUrl : '/profileImages/default.png'}" alt="프로필 이미지" style="width: 35px; height: 35px;">
+<!--                                <img id="preview-image" th:src="${#authentication.principal != null and #authentication.principal.memberEntity.image != null ? #authentication.principal.memberEntity.image.imageUrl : '/profileImages/default.png'}" alt="프로필 이미지" style="width: 35px; height: 35px;">-->
+                                <img id="preview-image" th:src="${memberImageUrl}" alt="프로필 이미지" style="width: 35px; height: 35px;">
                             </div>
                         </a>
                         </li>
