--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -7,5 +7,7 @@
 <body>
 <a th:href="@{/member/memberList}">회원목록</a>
 <a th:href="@{/semiMember/semiMemberList}">간편회원목록</a>
+<a th:href="@{/member/pagingList}">회원목록(페이징)</a>
+<a th:href="@{/semiMember/pagingList}">간편회원목록(페이징)</a>
 </body>
 </html>
