--- a/src/main/resources/static/css/semiMember/detail.css
+++ b/src/main/resources/static/css/semiMember/detail.css
@@ -1,3 +1,100 @@
 @import url(/css/common/reset.css);
 @import url(/css/common/header.css);
 @import url(/css/common/footer.css);
+.container{
+    width: 100%;
+}
+.container .nav{
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    box-sizing: border-box;
+}
+.container .nav .detail-con{
+    flex-basis: 800px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.container .nav .detail-con .title{
+    padding: 20px;
+    gap: 10px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    border-bottom: 2px solid #7285d3a4;
+}
+.container .nav .detail-con .detail{
+    margin: auto;
+    text-align: center;
+    width: 1000px;
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    box-sizing: border-box;
+    padding: 30px;
+}
+.container .nav .detail-con .detail ul{
+    width: inherit;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; 가운데 정렬 */
+    text-align: center;
+    /* border: 2px solid #ffe6e6; */
+    border-left: none;
+    border-right: none;
+    border-radius: 10px;
+}
+.container .nav .detail-con .detail ul>li:not(.delete){
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+.container .nav .detail-con .detail ul>li span{
+    line-height: 45px;
+    padding: 5px 10px;
+}
+.container .nav .detail-con .detail ul>li span:nth-child(1){
+    flex: 1;
+    width: 130px;
+    border-right: 2px solid #cccccc;
+    border-bottom: 2px solid #c5c5c5;
+    font-size: 18px;
+}
+.container .nav .detail-con .detail ul>li span:nth-child(2){
+    flex:3;
+    font-size: 18px;
+    border-bottom: 2px solid #c5c5c5;
+}
+/* delete button */
+.container .nav .detail-con .detail ul>li.delete{
+    display: flex;
+    justify-content: center;
+    padding: 18px;
+}
+.container .nav .detail-con .detail ul>li.delete .btn{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 100px;
+}
+.container .nav .detail-con .detail ul>li.delete a{
+    width: 200px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px 0;
+    font-size: 20px;
+    transition: all 0.2s;
+    border: 2px solid #7285d3a4;
+    border-radius: 10px;
+}
+.container .nav .detail-con .detail ul>li.delete a:hover{
+    background-color: rgb(239, 90, 119);
+    border: none;
+    color: #ffffff;
+}
