--- a/src/main/resources/templates/semiMember/detail.html
+++ b/src/main/resources/templates/semiMember/detail.html
@@ -4,21 +4,47 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
   <meta charset="UTF-8">
-  <title>detail</title>
+  <title>상세정보 페이지</title>
   <link rel="stylesheet" th:href="@{/css/semiMember/detail.css}">
 </head>
-<body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
-<div class="detail">
-  <h1 class="title"><span th:text="${semiMember.semiMemberEmail}" ></span>님 상세정보</h1>
-<!--  아이디 : <span th:text="${member.memberId}"></span> <br>-->
-  <span th:if="${false}" th:text="${semiMember.semiMemberId}"></span> <br> <!-- th:if="${false}" 입력 시 안보이게 처리 -->
-  이메일 : <span th:text="${semiMember.semiMemberEmail}"></span> <br>
-  휴대전화(암호화됨) : <span th:text="${semiMember.semiMemberPhone}"></span> <br>
-  권한 : <span th:text="${semiMember.role}"></span> <br>
-  가입일 : <span th:text="${#temporals.format(semiMember.createTime, 'yyyy-MM-dd HH:mm:ss')}"></span> <br>
-  <a th:href="@{/semiMember/confirmEmail/{semiMemberId}(semiMemberId=${semiMember.semiMemberId})}">삭제</a>
-</div>
+<body>
+  <div class="container">
+    <div class= "nav">
+      <div class="detail-con">
+        <div class="title">
+          <h1><span th:text="${semiMember.semiMemberEmail}" ></span>&nbsp;님 상세정보</h1>
+        </div>
+        <div class="detail">
+            <!--  아이디 : <span th:text="${member.memberId}"></span> <br>-->
+            <ul>
+              <span th:if="${false}" th:text="${semiMember.semiMemberId}"></span> <!-- th:if="${false}" 입력 시 안보이게 처리 -->
+              <li>
+                <span>이메일</span>
+                <span th:text="${semiMember.semiMemberEmail}"></span> 
+              </li>
+              <li>
+                <span>휴대전화(암호화됨)</span>
+                <span th:text="${semiMember.semiMemberPhone}"></span>
+              </li>
+              <li>
+                <span>권한</span>
+                <span th:text="${semiMember.role}"></span>
+              </li>
+              <li>
+                <span>가입일</span>
+                <span th:text="${#temporals.format(semiMember.createTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
+              </li>
+              <li class="delete">
+                <div class="btn">
+                  <a th:href="@{/semiMember/confirmEmail/{semiMemberId}(semiMemberId=${semiMember.semiMemberId})}">삭제</a>
+                  </div>
+              </li>
+            </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 <div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
