--- a/src/main/resources/templates/inquiry/detail.html
+++ b/src/main/resources/templates/inquiry/detail.html
@@ -60,6 +60,9 @@
                 .hidden {display:none}
             </style>
             <div class="reply-con">
+                <div class="title">
+                    <h2>답변</h2>
+                </div>
                 <div class="reply-write">
                     <form id="replyForm">
                         <input type="hidden" readonly name="inqId"
@@ -73,7 +76,7 @@
                             <!--                                <label for="reviewFile">리뷰사진</label>-->
                             <!--                                <input type="file" multiple name="reviewFile" id="reviewFile">-->
                             <!--                            </li>-->
-                            <li>
+                            <li class="Btn">
                                 <input type="button" value="답글작성" id="replyBtn">
                             </li>
                         </ul>
